####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = sisyphus
sisyphus_SOURCES = Chunk.C Bucket.C sisyphus.C SystemManager.C StdinThread.C SsmStartUpThread.C FileManager.C Cube.C CatalogManager.C BufferManager.C AccessManager.C 
sisyphus_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = AccessManager.C AccessManager.h AccessManager.o BufferManager.C BufferManager.h BufferManager.o CatalogManager.C CatalogManager.h CatalogManager.o CodingStyle Cube.C Cube.h Cube.o Dim.txt Dim1.txt Dimensions.txt FileManager.C FileManager.h FileManager.o Makefile Makefile.Dependencies NOTE_ABOUT_DEPENDENCIES SsmStartUpThread.C SsmStartUpThread.h SsmStartUpThread.o StdinThread.C StdinThread.h StdinThread.o SystemManager.C SystemManager.h SystemManager.o config definitions.h device.toy exampleconfig toyserver toyserver.o sisyphus.C sisyphus_TODO Chunk.h Bucket.C Bucket.h Chunk.C 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = sisyphus
